# IndieStudio

./: .gitignore  CMakeLists.txt  DocMainPage.md  Doxyfile  README.md  _abstract_base_8cpp.html  _abstract_base_8cpp__incl.map  _abstract_base_8cpp__incl.md5  _abstract_base_8cpp_ad353a259d30921050327fd6b0e4ca838_cgraph.map  _abstract_base_8hpp.html  _abstract_base_8hpp__dep__incl.map  _abstract_base_8hpp__dep__incl.md5  _abstract_base_8hpp__incl.map  _abstract_base_8hpp__incl.md5  _abstract_base_8hpp_ad22005d61928ad99ba010050d61b2424_cgraph.map  _abstract_base_8hpp_ad353a259d30921050327fd6b0e4ca838_cgraph.md5  _abstract_base_8hpp_source.html  _abstract_sound_8cpp.html  _abstract_sound_8cpp__incl.map  _abstract_sound_8cpp__incl.md5  _abstract_sound_8hpp.html  _abstract_sound_8hpp__dep__incl.map  _abstract_sound_8hpp__dep__incl.md5  _abstract_sound_8hpp__incl.map  _abstract_sound_8hpp__incl.md5  _abstract_sound_8hpp_source.html  _audio_8cpp.html  _audio_8cpp__incl.map  _audio_8cpp__incl.md5  _audio_8hpp.html  _audio_8hpp__dep__incl.map  _audio_8hpp__dep__incl.md5  _audio_8hpp__incl.map  _audio_8hpp__incl.md5  _audio_8hpp_source.html  _audio_device_helper_8cpp.html  _audio_device_helper_8cpp__incl.map  _audio_device_helper_8cpp__incl.md5  _audio_device_helper_8hpp.html  _audio_device_helper_8hpp__dep__incl.map  (+3711 more)
raylib-cpp/: .gitignore  CMakeLists.txt  Doxyfile  cmake.sh
raylib-cpp/cmake/: FindBoostJson.cmake  Findraylib.cmake
raylib-cpp/include/GameEngine/: Component.hpp  GameEngine.hpp  MainScene.hpp  MapParser.hpp  Node.hpp  Scene.hpp  SceneManager.hpp  TextureManager.hpp  Time.hpp  myButton.hpp  myStaticBody.hpp
raylib-cpp/include/GameEngine/Audio/: AbstractSound.hpp  AudioManager.hpp  Fx.hpp  ISound.hpp  Isound.hpp  Music.hpp  Sound.hpp
raylib-cpp/include/GameEngine/Component/: GridComponent.hpp
raylib-cpp/include/GameEngine/Nodes/: AbstractBase.hpp  Base.hpp  KinematicBody.hpp  Node.hpp  StaticBody.hpp
raylib-cpp/include/GameEngine/exception/: GameEngineException.hpp  MapParserException.hpp
raylib-cpp/include/raylib/: Audio.hpp  Cameras.hpp  Core.hpp  Cursor.hpp  Draw.hpp  Fonts.hpp  Gamepad.hpp  GlStateManager.hpp  IBuilder.hpp  Keyboard.hpp  Math.hpp  Models.hpp  Mouse.hpp  Random.hpp  Raylib.hpp  Shaders.hpp  Shape.hpp  Text.hpp  Texture.hpp  Touch.hpp
raylib-cpp/include/raylib/2DObject/: Collision2DHelper.hpp  Shape.hpp  Shape2DHelper.hpp
raylib-cpp/include/raylib/3DObject/: Collision3DHelper.hpp  MeshGenerator.hpp  MeshHelper.hpp  ModelAnim.hpp  ModelHelper.hpp  RlAnimation.hpp  RlMaterial.hpp  RlMesh.hpp  RlMeshBuilder.hpp  RlModel.hpp  RlModelAnim.hpp  RlModelAnimation.hpp  RlModelBuilder.hpp  Shape3DHelper.hpp
raylib-cpp/include/raylib/Audio/: Audio.hpp  AudioDeviceHelper.hpp  AudioHelper.hpp  RlAudioStream.hpp  RlMusic.hpp  RlMusicStream.hpp  RlSound.hpp  RlWave.hpp  WaveHelper.hpp
raylib-cpp/include/raylib/Camera/: CameraHelper.hpp  RlCamera.hpp  RlCameraBuilder.hpp
raylib-cpp/include/raylib/Color/: ColorHelper.hpp  RlColor.hpp
raylib-cpp/include/raylib/Core/: CompressHelper.hpp  Core.hpp  CoreHelper.hpp  DrawHelper.hpp  FileHelper.hpp  RlLogger.hpp  WorldHelper.hpp
raylib-cpp/include/raylib/Draw/: Draw2DHelper.hpp  Draw3DHelper.hpp  DrawHelper.hpp  DrawModelHelper.hpp  DrawTextHelper.hpp  DrawTextureHelper.hpp
raylib-cpp/include/raylib/Image/: ColorHelper.hpp  ImageDrawHelper.hpp  ImageGenerator.hpp  ImageHelper.hpp  RlImage.hpp  RlImageBuilder.hpp
raylib-cpp/include/raylib/Inputs/: Cursor.hpp  CursorHelper.hpp  Gamepad.hpp  GamepadHelper.hpp  Keyboard.hpp  KeyboardHelper.hpp  Mouse.hpp  MouseHelper.hpp  Touch.hpp  TouchHelper.hpp
raylib-cpp/include/raylib/Math/: Vector.hpp  VectorHelper.hpp
raylib-cpp/include/raylib/Shader/: RlShader.hpp  ShaderUtils.hpp
raylib-cpp/include/raylib/Text/: Codepoint.hpp  Fonts.hpp  RlFont.hpp  RlText.hpp  RlTextBuilder.hpp  Text.hpp  TextCodepoint.hpp  TextHelper.hpp
raylib-cpp/include/raylib/Texture/: RlRenderTexture.hpp  RlTexture.hpp  Texture.hpp  TextureHelper.hpp
raylib-cpp/include/raylib/Window/: MonitorHelper.hpp  RlWindow.hpp  System.hpp  Window.hpp
raylib-cpp/include/raylib/exception/: BuilderException.hpp  Exceptions.hpp  InvalidArgumentException.hpp  RaylibException.hpp  WindowException.hpp
raylib-cpp/include/raylib/render/: Draw2DHelper.hpp  DrawHelper.hpp
raylib-cpp/src/: Audio.cpp  Cameras.cpp  Core.cpp  Cursor.cpp  Draw.cpp  Fonts.cpp  Gamepad.cpp  Keyboard.cpp  Models.cpp  Mouse.cpp  Shaders.cpp  Shape.cpp  Text.cpp  Texture.cpp  Touch.cpp
raylib-cpp/src/2DObject/: Collision2DHelper.cpp  Shape.cpp  Shape2DHelper.cpp
raylib-cpp/src/3DObject/: Collision3DHelper.cpp  MeshGenerator.cpp  MeshHelper.cpp  ModelAnim.cpp  ModelHelper.cpp  RlMaterial.cpp  RlMesh.cpp  RlModel.cpp  RlModelAnim.cpp  Shape3DHelper.cpp
raylib-cpp/src/Audio/: Audio.cpp  AudioHelper.cpp  RlAudioStream.cpp  RlMusic.cpp  RlSound.cpp  RlWave.cpp  WaveHelper.cpp
raylib-cpp/src/Camera/: RlCamera.cpp
raylib-cpp/src/Color/: ColorHelper.cpp
raylib-cpp/src/Core/: CompressHelper.cpp  Core.cpp  CoreHelper.cpp  DrawHelper.cpp
raylib-cpp/src/GameEngine/: Component.cpp  GameEngine.cpp  MainScene.cpp  Node.cpp  Scene.cpp  SceneManager.cpp  TextureManager.cpp  myButton.cpp  myStaticBody.cpp
raylib-cpp/src/GameEngine/Audio/: AbstractSound.cpp  AudioManager.cpp  Fx.cpp  ISound.cpp  Isound.cpp  (+2 more)
raylib-cpp/src/Image/: ColorHelper.cpp  ImageGenerator.cpp  ImageHelper.cpp  RlImage.cpp
raylib-cpp/src/Inputs/: Cursor.cpp  Gamepad.cpp  GamepadHelper.cpp  Keyboard.cpp  Mouse.cpp  MouseHelper.cpp  Touch.cpp  TouchHelper.cpp
raylib-cpp/src/Math/: VectorHelper.cpp
raylib-cpp/src/Shader/: RlShader.cpp  ShaderUtils.cpp
raylib-cpp/src/Text/: Codepoint.cpp  Fonts.cpp  RlFont.cpp  Text.cpp  TextHelper.cpp
raylib-cpp/src/Texture/: RlTexture.cpp  Texture.cpp  TextureHelper.cpp
raylib-cpp/src/Window/: MonitorHelper.cpp  RlWindow.cpp  Window.cpp
raylib-cpp/src/exception/: BuilderException.cpp  WindowException.cpp
raylib-cpp/src/raylib/: GlStateManager.cpp  Random.cpp
raylib-cpp/tests/: MainTest.cpp  TestWindow.cpp
(+338 files in other folders)
